--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,7 +1,13 @@
-@use 'vuetify' with (
-  $font-size-root: 18px,
+@use "vuetify" with (
+  $font-size-root: 18px
 );
 
 @use "./typography.scss";
 @use "./override/typography-override.scss";
 //@use "./components.scss";
+
+//@use '@ionic/vue/css/core.css';
+//@use '@ionic/vue/css/normalize.css';
+//@use '@ionic/vue/css/structure.css';
+//@use '@ionic/vue/css/typography.css';
+//@use '@ionic/vue/css/display.css';
